--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ansible
+        
+      - name: Run tests
+        run: |
+          for D in ziouf/*; do
+            pushd "${D}"
+            ansible-test units --docker default -v --python 3.9
+            popd
+          done
 
       - name: Deploy collections
         run: ansible-playbook -i 'localhost,' .github/playbooks/deploy.yml
