Setup ansible-test to run in venv

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           for D in ziouf/*; do
             pushd "${D}"
-            ansible-test units --docker default -v --python 3.9
+            ansible-test units --venv -v --python 3.9
             popd
           done
 
