--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,16 @@ on:
 
 jobs:
   deploy:
+
+    strategy:
+      fail-fast: true
+      matrix:
+        python-version: 
+        - 3.6
+        - 3.7
+        - 3.8
+        - 3.9
+
     runs-on: ubuntu-latest
 
     env:
@@ -17,24 +27,22 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python 3.9
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: 3.9
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ansible
+          python -m pip install ansible pytest pytest-xdist
         
       - name: Run tests
         run: |
-          for D in ziouf/*; do
-            [ -d "${D}/tests/unit" ] && {
-              pushd "${D}"
-              ansible-test units --venv -v --python 3.9
-              popd
-            }
+          for D in ziouf/*/tests/unit; do
+            pushd "${D}"
+            ansible-test units --python ${{ matrix.python-version }} -vvv
+            popd
           done
 
       - name: Deploy collections
