--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install ansible pytest pytest-xdist
+          python -m pip install ansible pytest pytest-xdist pytest-mock
         
       - name: Run tests
         run: |
