--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,10 +32,22 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
-        run: |
+      - name: Upgrade pip
+        run: >-
           python -m pip install --upgrade pip
-          python -m pip install ansible pytest pytest-xdist pytest-mock
+
+      - name: Install dependencies
+        run: >-
+          python -m pip install 
+            ansible
+            cryptography
+            jinja2
+            mock
+            pytest
+            pytest-mock
+            pytest-xdist
+            pyyaml
+            resolvelib
         
       - name: Run tests
         run: |
