--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,7 +58,8 @@ jobs:
         working-directory: ziouf/${{ matrix.module }}
 
   deploy:
-
+    needs: test
+    
     runs-on: ubuntu-latest
 
     steps:
