--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,27 +57,25 @@ jobs:
         run: ansible-test units --python ${{ matrix.python-version }} -vvv
         working-directory: ziouf/${{ matrix.module }}
 
+        
   deploy:
     needs: test
-    
+
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python 3.9
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.9
 
       - name: Upgrade pip
-        run: >-
-          python -m pip install --upgrade pip
+        run: python -m pip install --upgrade pip
 
       - name: Install dependencies
-        run: >-
-          python -m pip install 
-          ansible
+        run: python -m pip install ansible
 
       - name: Deploy collections
-        run: ansible-playbook -i 'localhost,' .github/playbooks/deploy.yml
+        run: ansible-playbook -i 'localhost,' .github/playbooks/deploy.yml -vvv
