--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          path: '../'
+          path: 'collections'
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
