--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
           path: 'collections'
 
       - name: Debug
-        run: ls -lah collections/*
+        run: ls -lah collections/tpm/*
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
@@ -60,7 +60,7 @@ jobs:
         
       - name: Run tests
         run: ansible-test units --python ${{ matrix.python-version }} -vvv
-        working-directory: collections/ziouf/${{ matrix.module }}
+        working-directory: ./collections/ziouf/${{ matrix.module }}
 
 
   deploy:
