--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,8 @@ jobs:
       - name: Run tests
         run: ansible-test units --python ${{ matrix.python-version }} -vvv
         working-directory: ziouf/${{ matrix.module }}
+        env:
+          ANSIBLE_COLLECTIONS_PATHS: /home/runner/work/ansible_collections/ansible_collections
 
 
   deploy:
