--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,8 +7,6 @@ on:
     branches:
       - "master"
 
-env:
-  ANSIBLE_GALAXY_TOKEN: ${{ secrets.ANSIBLE_GALAXY_TOKEN }}
 
 jobs:
   test:
@@ -30,6 +28,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        env:
+          GITHUB_WORKSPACE: /home/runner/work
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
@@ -81,3 +81,5 @@ jobs:
 
       - name: Deploy collections
         run: ansible-playbook -i 'localhost,' .github/playbooks/deploy.yml -vvv
+        env:
+          ANSIBLE_GALAXY_TOKEN: ${{ secrets.ANSIBLE_GALAXY_TOKEN }}
