--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: cp -r ${HOME}/work/ansible_collections/ansible_collections ${HOME}/collections
-
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
@@ -54,7 +52,7 @@ jobs:
         
       - name: Run tests
         run: ansible-test units --python ${{ matrix.python-version }} -vvv
-        working-directory: ${{ env.HOME }}/collections/ziouf/${{ matrix.module }}
+        working-directory: ziouf/${{ matrix.module }}
 
 
   deploy:
