--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - run: echo ${{ toJson(github) }}
+
       - uses: actions/checkout@v2
 
       - name: Set up Python ${{ matrix.python-version }}
