--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,17 +14,17 @@ jobs:
       max-parallel: 2
       matrix:
         python-version: 
-        - 2.7
-        - 3.5
-        - 3.6
-        - 3.7
-        - 3.8
-        - 3.9
-        - 3.10
+        - "2.7"
+        - "3.5"
+        - "3.6"
+        - "3.7"
+        - "3.8"
+        - "3.9"
+        - "3.10"
         module: 
-          - tpm
-          # - nexus
-          # - raspberrypi
+          - "tpm"
+          # - "nexus"
+          # - "raspberrypi"
   
     runs-on: ubuntu-latest
 
